# DigitalExchange

./: .gitignore  README.md  build_containers.sh  createDockerNetworks.sh  start_containers.sh
RND/Boost/SharedMemory/: CMakeLists.txt  data.h  reader.cpp  writer.cpp
RND/aeron C media driver/: Dockerfile  docker-compose.yml  entrypoint.sh
RND/aeron C media driver/code/: main.cpp
RND/aeron JAVA media driver/: Dockerfile  docker-compose.yml  entrypoint.sh
RND/aeron archive C media driver/: Dockerfile  docker-compose.yml
RND/aeron archive C media driver/code/: CMakeLists.txt  main.cpp
RND/kafka-cluster/: docker-compose.yml
RND/kafka-cluster/test/: consumer.py
RND/redis-cluster/: docker-compose.yml
RND/redis_cache/: docker-compose.yml
bots/simple/: BotPool.py  IngressApi.py  SimpleBot.py  main.py
dbs/postgreSQL/: Dockerfile  docker-compose.yml
dbs/redis_cache/: docker-compose.yml
docs/draw/: architecture.ai
egress_hub/: Dockerfile  docker-compose.yml  startDockerContainers.sh
egress_hub/code/: entrypoint.sh
egress_hub/code/db_trades_updater/: CMakeLists.txt  build.sh
egress_hub/code/db_trades_updater/Agent/: Agent.h
egress_hub/code/db_trades_updater/AppConfig/: AppConfig.cpp  AppConfig.h
egress_hub/code/db_trades_updater/LocalResponseChannelPublication/: LocalResponseChannelPublication.cpp
egress_hub/code/db_trades_updater/MainLoopAgent/: MainLoopAgent.cpp  MainLoopAgent.h
egress_hub/code/db_trades_updater/MessageMappedBuffer/: MessageMappedBuffer.cpp
egress_hub/code/db_trades_updater/TradesDbManager/: TradesDbManager.cpp  TradesDbManager.h
egress_hub/code/db_trades_updater/TradesDispatcher/: TradesDispatcher.cpp  TradesDispatcher.h
egress_hub/code/db_trades_updater/Utils/: SbeUtilsHubInner.h  SbeUtilsMeOut.h  Utils.h
egress_hub/code/db_trades_updater/sbe/digital_exchange_sbe_hub_inner/: PositionUpdate.h
egress_hub/code/db_trades_updater/sbe/digital_exchange_sbe_me_output/: SbeOrderType.h
frontend/: Dockerfile  docker-compose.yml
frontend/code/: package-lock.json  package.json
ingress_rest_server/: Dockerfile  docker-compose.yml  entrypoint.sh  rest_server_curl.txt
ingress_rest_server/code/: build.gradle.kts  gradle.properties  settings.gradle.kts
me/: Dockerfile  docker-compose.yml  entrypoint.sh
me/ME_Architecture/: ME_Architecture.drawio
me/code/: build.gradle.kts  settings.gradle.kts
rest_server_marketdata/: Dockerfile  docker-compose.yml  rest_server_curl.txt
rest_server_marketdata/code/: build.gradle.kts  settings.gradle.kts
sbeGen/: genSbe.py
sbeGen/codecs/: common_types_exchange.xml  sbe_hub_inner.xml  sbe_me_in.xml  sbe_me_out.xml
sbeGen/simple-binary-encoding-1.35.6/: CHANGELOG.md  build.gradle
ws_server/: Dockerfile  docker-compose.yml  entrypoint.sh  ws_client.py
ws_server/code/: build.gradle.kts  settings.gradle.kts
(+350 files in other folders)
